Fix: Dark mode mobile button spacing

--- a/portfolio/src/app/componenets/info/info.component.css
+++ b/portfolio/src/app/componenets/info/info.component.css
@@ -256,6 +256,7 @@
         width: 9rem;
         height: 2.86rem;
         font-size: 1.2rem;
+        margin-bottom: 2rem;
     }
     #email {
         margin-bottom: 0rem;
